# STM32F746G-DISCO-Template

./: .mxproject  CMakeLists.txt  F746.ioc  STM32F746NGHx_FLASH.ld  gcc-arm-none-eabi.cmake  readme.md
Core/: CMakeLists.txt
Core/Src/: main.c  stm32f7xx_hal_msp.c
Drivers/CMSIS/: CMakeLists.txt
Drivers/STM32F7xx_HAL_Driver/: CMakeLists.txt
